--- a/Main/bio/bio.html
+++ b/Main/bio/bio.html
@@ -14,8 +14,9 @@
 
     <div class="Bio">
         <div class="Grid-item"><button class="button" onclick="history.back()">Main</button> </div>
+        <div class="Grid-item"><button class="button"><a href="http://127.0.0.1:5500/Main/Spel/spel.html">Spel</a></button></div>
         <div class="Grid-item">hej</div>
-        <div class="Grid-item">hej</div>
+        
     </div>
     <div>
         <h1>Hejsan!</h1>
@@ -25,19 +26,19 @@
     </div>
 
     <div class="grid-container">
-        <div class="grid-item"><img
+        <div class="img1"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQUiIT7s3KiuSGZd98ry-s3pSzBqFgKC_CqG56cHOR2yeu13k4CPVkEvgHeCDWRZzAx-Hs&usqp=CAU"
                 alt="måla"></div>
-        <div class="grid-item"><img
+        <div class="img2"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ9l-JIWZ5Loh9ukr2RoGaMUR51rGqZM9nEIg&usqp=CAU"
                 alt=""></div>
-        <div class="grid-item"><img
+        <div class="img3"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTZX96iwot4q0NhcvCxEv8CuYOkJGeTgnLssojR1uH_VuVjRMUkG2VzDpui4Ay-NSA8LkI&usqp=CAU"
                 alt=""></div>
-        <div class="grid-item"><img
+        <div class="img4"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSrub5ZHc-K7i-tUZ9YRe6dj4st7xdBsohg1g&usqp=CAU"
                 alt=""></div>
-        <div class="grid-item"><img
+        <div class="img5"><img
                 src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQKehFB5CL6rSQlHxZ5srZpXTV-aPWYl8F8BQ&usqp=CAU"
                 alt=""></div>
 
