--- a/Main/bio/bio.html
+++ b/Main/bio/bio.html
@@ -13,7 +13,7 @@
 
 
     <div class="Bio">
-        <div class="Grid-item"><button class="button" onclick="history.back()">Main</button> </div>
+        <div class="Grid-item"><button class="button" ><a href="http://127.0.0.1:5500/Main/index.html">Main</a></button></div>
         <div class="Grid-item"><button class="button"><a href="http://127.0.0.1:5500/Main/Spel/spel.html">Spel</a></button></div>
         <div class="Grid-item">hej</div>
         
